Fix use of 1.5 methods